--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "krishna kant singh",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
